--- a/flare-1.0.0/index.html
+++ b/flare-1.0.0/index.html
@@ -335,7 +335,7 @@
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/atom.svg" /></a>
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/github.svg" /></a>
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/redhat.svg" /></a>
-                    <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/medium.svg" /></a>
+                    <a href="#0" title="" class="clients__slide"><img src="images\icons\clients\ollama.png" /></a>
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/messenger.svg" /></a>
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/steam.svg" /></a>
                     <a href="#0" title="" class="clients__slide"><img src="images/icons/clients/spotify.svg" /></a>
