--- a/flare-1.0.0/index.html
+++ b/flare-1.0.0/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="s-hero__video">
-            <a class="s-hero__video-link" href="https://player.vimeo.com/video/117310401?color=01aef0&amp;title=0&amp;byline=0&amp;portrait=0" data-lity="">
+            <a class="s-hero__video-link" href="https://vimeo.com/1042608198?share=copy#t=0" data-lity="">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21 12l-18 12v-24z"/></svg>
                 <span class="s-hero__video-text">Play Video</span>
             </a>
